# 17deg-atlas

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
modules/knowledge/: README.md  pyproject.toml
modules/knowledge/scripts/: kb.py
modules/knowledge/skills/github-api-file-pusher/: SKILL.md
modules/knowledge/skills/github-api-file-pusher/agents/: openai.yaml
modules/knowledge/skills/github-api-file-pusher/scripts/: kb.py  remote.py
modules/knowledge/skills/github-api-file-pusher/tests/: test_skill_contract.py
modules/knowledge/src/kb_vault/: __init__.py  agent.py  atlas.py  atlas_cli.py  bootstrap.py  capability.py  cli.py  compiler_quality.py  core.py  curator.py  cycle.py  dependencies.py  github_onboarding.py  hermes.py  io_utils.py  migration.py  model.py  registry.py  remote_inbox.py  retrieval.py  semantic.py  workspace_views.py
modules/knowledge/src/kb_vault/adapters/: __init__.py  github_contents.py  local.py
modules/knowledge/templates/instance/: .gitattributes  .gitignore  AGENTS.md  LICENSES.md  README.md
modules/knowledge/templates/instance/config/: policies.yml  projection.yml  tiers.yml
modules/knowledge/templates/instance/manifests/: projection-selection.json
modules/knowledge/templates/personal-domain/: .gitignore  AGENTS.md  README.md
modules/knowledge/tests/: test_agent_experience.py  test_capability_plane.py  test_cli_packaging.py  test_instance_migration.py  test_orthogonal_model.py  test_productization.py  test_semantic_governance.py  test_semantic_plane.py  test_trusted_retrieval.py
(+53 files in other folders)
