[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "17deg-atlas-knowledge"
version = "0.1.0"
description = "Agent-ready, tiered knowledge management module"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["knowledge-base", "ai-agent", "age-encryption", "retrieval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/canyexuanfan/17deg-atlas"
Issues = "https://github.com/canyexuanfan/17deg-atlas/issues"

[project.scripts]
kb-vault = "kb_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
